<resources>
    <string name="app_name">LibrariesDemo</string>

    <string name="image_loader_glide">Glide</string>
    <string name="image_loader_coil">Coil</string>
    <string name="simple_call">Simple Call</string>
    <string name="image_loading">Image Loading</string>
    <string name="activity_recognition">Activity Recognition</string>
    <string name="transition_api">Transition API</string>
    <string name="update_api">Update API</string>

    <string name="status">Status: %1$s</string>
    <string name="logs">Logs</string>

    <string name="activity_update_event_title">Activity: %1$s</string>
    <string name="activity_update_event_confidence">Confidence: %1$d%%</string>

    <string name="activity_type_in_vehicle">In vehicle</string>
    <string name="activity_type_on_bicycle">On bicycle</string>
    <string name="activity_type_on_foot">On foot</string>
    <string name="activity_type_still">Still</string>
    <string name="activity_type_unknown">Unknown</string>
    <string name="activity_type_tilting">Tilting</string>
    <string name="activity_type_walking">Walking</string>
    <string name="activity_type_running">Running</string>

    <string name="activity_update_start">Start updates</string>
    <string name="activity_update_stop">Stop updates</string>
    <string name="work_manager">Work Manager</string>

    <string name="long_lat_format">Long: %1$f Lat: %2$f</string>
    <string name="motion_layout">Motion Layout</string>
    <string name="android_mountains">Android Mountains</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="music_player">Music Player</string>
    <string name="google_maps">Google Maps</string>
    <string name="coordinator_layout">Coordinator layout</string>
    <string name="demo_balance">3000$</string>
    <string name="biometrics_demo">Biometrics demo</string>
    <string name="data">Data</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>

</resources>