<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="30dp">

    <Button
        style="@style/Button.Home"
        android:id="@+id/simple_call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_call" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/image_loading_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_loading" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/activity_recognition_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_recognition" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/work_manager_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/motion_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_layout" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/google_maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_maps" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/coordinator_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinator_layout" />

    <Button
        style="@style/Button.Home"
        android:id="@+id/biometrics_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometrics_demo" />


</LinearLayout>